<resources>
    <string name="app_name">Marvel - Code Challenge</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="series">Series</string>
    <string name="events">Events</string>
    <string name="stories">Stories</string>
    <string name="loading">Loading…</string>
    <string name="error">HYDRA has stolen this request from S.H.I.E.L.D API!</string>
    <string name="call_the_avengers">Call the avengers!</string>
    <string name="captain">Captain Marvel</string>
    <string name="list_empty">No results</string>
    <string name="test_title">A-Bomb (HAS)</string>
    <string name="test_description">Rick Jones has been Hulks best bud since day one, but now hes more than a friend…hes a teammate! Transformed by a Gamma energy explosion, A-Bombs thick, armored skin is just as strong and powerful as it is blue. And when he curls into action, he uses it like a giant bowling ball of destruction!</string>
    <string name="image_general">Image general</string>
    <string name="comics">Comics</string>
    <string name="close">Close</string>
</resources>